--- a/data-architect.html
+++ b/data-architect.html
@@ -69,7 +69,7 @@ Time. Submit your application. Resume/CV ?. ATTACH RESUME/CV. Couldn't?...</p>
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-23</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://www.workable.com/j/139886A003'>Hummingbird Technologies Ltd - Jobs: Big Data Architect - Apply ...</a></h5> 
+<h5><a href='https://www.workable.com/j/139886A003'>Hummingbird Technologies Ltd - Jobs: Big Data Architect - Apply ...</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>4 days ago ... You will join a talented team of software engineers, big data engineers, computer 
 vision experts and machine learning researchers, and are expected to get up?...</p>
@@ -109,7 +109,7 @@ effectively?...</p>
 <p><span class="badge badge-light">New York, NY</span></p>
 <p>Posted on: 2019-07-21</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://careers-sas.icims.com/jobs/18438/sr-data-architect%2C-cloud/job'>Sr Data Architect, Cloud in United States, United States | Careers at ...</a></h5> 
+<h5><a href='https://careers-sas.icims.com/jobs/18438/sr-data-architect%2C-cloud/job'>Sr Data Architect, Cloud in United States, United States | Careers at ...</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Jul 10, 2019 ... Focus on solving customer challenges in all data disciplines; ranging from 
 traditional data warehouses & data lakes to streaming cloud & big data 
@@ -136,7 +136,7 @@ created role, you will be responsible for building the foundation of our?...</p>
 <p><span class="badge badge-light">Philadelphia, PA</span></p>
 <p>Posted on: 2019-07-20</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://careers.jobscore.com/careers/radiantdigital/jobs/data-technical-architect-contingent-worker-21458-bIFBEyQGGr6AfKaKkRyNN8'>Data/Technical Architect-Contingent Worker-21458 #0193 job at Radiant Digital in Irving, TX, powered by JobScore</a></h5> 
+<h5><a href='https://careers.jobscore.com/careers/radiantdigital/jobs/data-technical-architect-contingent-worker-21458-bIFBEyQGGr6AfKaKkRyNN8'>Data/Technical Architect-Contingent Worker-21458 #0193 job at Radiant Digital in Irving, TX, powered by JobScore</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-19</p>
 <hr/>
@@ -144,12 +144,12 @@ created role, you will be responsible for building the foundation of our?...</p>
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-19</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://experian.referrals.selectminds.com/jobs/technical-data-architect-11353'>Technical Data Architect - Experian Careers</a></h5> 
+<h5><a href='https://experian.referrals.selectminds.com/jobs/technical-data-architect-11353'>Technical Data Architect - Experian Careers</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>3 days ago ... The Architect will play a critical role in designing, developing and implementing 
 high performing applications using NOSQL DB and BigData...</p>
 <hr/>
-<h5><a href='https://jobs.crelate.com/portal/sundial/job/c7igjkjogkzdou4jweofrxamue'>Software Engineer Database/Data Architect (11259) | Sundial Software Career Opportunities</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.crelate.com/portal/sundial/job/c7igjkjogkzdou4jweofrxamue'>Software Engineer Database/Data Architect (11259) | Sundial Software Career Opportunities</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-18</p>
 <hr/>
@@ -245,7 +245,7 @@ database models; Documentation of functional requirements and system?...</p>
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-14</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://jobs.jobvite.com/gettyimages/job/ohGwafwn'>Getty Images Careers - Enterprise Data Architect</a></h5> 
+<h5><a href='http://jobs.jobvite.com/gettyimages/job/ohGwafwn'>Getty Images Careers - Enterprise Data Architect</a></h5> 
 <p><span class="badge badge-light">Seattle</span></p>
 <p>Posted on: 2019-07-14</p>
 <hr/>
@@ -299,7 +299,7 @@ class?...</p>
 <p><span class="badge badge-light">Chicago, IL</span></p>
 <p>Posted on: 2019-07-10</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/CapTechConsulting/743999691373863-senior-data-analytics-architect'>CapTech Consulting Senior Data &amp; Analytics Architect | SmartRecruiters</a></h5> 
+<h5><a href='https://jobs.smartrecruiters.com/CapTechConsulting/743999691373863-senior-data-analytics-architect'>CapTech Consulting Senior Data &amp; Analytics Architect | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">Denver</span></p>
 <p>Posted on: 2019-07-10</p>
 <hr/>
@@ -368,7 +368,7 @@ architecture for a diverse set of customers and industries. The ideal candidate?
 <p><span class="badge badge-light">San Francisco, California</span></p>
 <p>Posted on: 2019-07-03</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://luxasia.workable.com/j/632CCA36FA'>Luxasia - Jobs: Regional Data Solution Architect - Apply online</a></h5> 
+<h5><a href='https://luxasia.workable.com/j/632CCA36FA'>Luxasia - Jobs: Regional Data Solution Architect - Apply online</a></h5> 
 <p><span class="badge badge-light">Kuala Lumpur Malaysia</span></p>
 <p>Posted on: 2019-07-03</p>
 <hr/>
@@ -397,7 +397,7 @@ Security Engineer, Cyber Operations (TS/SCI Polygraph Clearance). Annapolis?...<
 <p><span class="badge badge-light">San Francisco California</span></p>
 <p>Posted on:: 2019-07-01</p>
 <hr/>
-<h5><a href='https://jobs.smartrecruiters.com/smartrecruiters83/743999690976930-data-architect-130k-160k-immediate-health-care-benefits-401k-20-days-pto-plus-more-'>IT Pros Data Architect  ($130K - $160K / Immediate Health Care Benefits / 401k / 20-days PTO / Plus More) | SmartRecruiters</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/smartrecruiters83/743999690976930-data-architect-130k-160k-immediate-health-care-benefits-401k-20-days-pto-plus-more-'>IT Pros Data Architect  ($130K - $160K / Immediate Health Care Benefits / 401k / 20-days PTO / Plus More) | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">Philadelphia, PA</span></p>
 <p>Posted on: 2019-06-30</p>
 <hr/>
@@ -450,7 +450,7 @@ bricks-and-mortar retail world with innovative products that fuel...</p>
 <p><span class="badge badge-light">Atlanta</span></p>
 <p>Posted on: 2019-06-28</p>
 <hr/>
-<h5><a href='https://jobs.lever.co/datacom.co.nz/c2b42c10-d9b8-4e0f-9ec4-6155c16fbd9c'>Datacom - Senior Security Architect</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/datacom.co.nz/c2b42c10-d9b8-4e0f-9ec4-6155c16fbd9c'>Datacom - Senior Security Architect</a></h5> 
 <p><span class="badge badge-light">Auckland</span></p>
 <p>Posted on: 2019-06-27</p>
 <hr/>
